--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "core-js": "^2.5.7",
+    "raf": "^3.4.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
