--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.0.0",
+    "css-loader": "^1.0.0",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.22.1",
     "typescript": "^2.8.3",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
