--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react_seed",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.tsx",
   "scripts": {
-    "prod": "./node_modules/.bin/webpack",
-    "dev": "./node_modules/.bin/webpack-serve",
+    "prod": "webpack",
+    "dev": "webpack-serve --content public",
+    "copydist": "cp node_modules/react/umd/react.*.js public/assets/dist && cp node_modules/react-dom/umd/react-dom.*.js public/assets/dist",
+    "postinstall": "npm run copydist",
     "start": "npm run dev"
   },
   "serve": {
@@ -22,11 +24,13 @@
     "core-js": "^2.5.7",
     "raf": "^3.4.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "ts-loader": "^4.4.2"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^1.0.0",
+    "error-overlay-webpack-plugin": "^0.1.5",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
