--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
     "core-js": "^2.5.7",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.5",
     "raf": "^3.4.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -31,6 +33,7 @@
     "css-loader": "^1.0.0",
     "error-overlay-webpack-plugin": "^0.1.5",
     "json-loader": "^0.5.7",
+    "mobx-delorean": "^1.1.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
